Changed sample to use Otel-Collector

--- a/rebar.config
+++ b/rebar.config
@@ -1,16 +1,10 @@
 {erl_opts, [debug_info]}.
-{deps, [grpcbox,
-        {opentelemetry_api,
-         {git_subdir, "http://github.com/open-telemetry/opentelemetry-erlang", {branch, "main"}, "apps/opentelemetry_api"}},
-        {opentelemetry,
-         {git_subdir, "http://github.com/open-telemetry/opentelemetry-erlang", {branch, "main"}, "apps/opentelemetry"}},
-        {opentelemetry_exporter,
-         {git_subdir, "http://github.com/open-telemetry/opentelemetry-erlang", {branch, "main"}, "apps/opentelemetry_exporter"}}
-
-       ]}.
+{deps, [{opentelemetry_api, "~> 1.0.0-rc.4"}, 
+        {opentelemetry, "~> 1.0.0-rc.4"},
+        {opentelemetry_exporter, "~> 1.0.0-rc.4"}]}.
 
 {relx, [{release, {otel_getting_started, "0.1.0"},
-         [otel_getting_started,
+         [opentelemetry_exporter, otel_getting_started,
           sasl]},
 
         {mode, dev},
