--- a/config/sys.config
+++ b/config/sys.config
@@ -1,12 +1,14 @@
 [
- {otel_getting_started, []},
+  {otel_getting_started, []},
 
- {opentelemetry,
-  [{processors, [{otel_batch_processor,
-                  #{exporter => {opentelemetry_exporter, #{protocol => grpc}}}
-                 }]
-   }]},
- {opentelemetry_exporter, [
-   {protocol, grpc}
- ]}
+  {opentelemetry,
+    [{processors, 
+      [{otel_batch_processor,
+        #{exporter => {opentelemetry_exporter, #{endpoints =>
+          ["http://localhost:4318"],
+          headers => [{"Header_Key", "Header_Value"}]}
+        }}
+      }]
+    }]
+  }
 ].
