--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: "3.9"
 services:
   jaeger:
     image: jaegertracing/all-in-one:1.29
@@ -7,10 +8,9 @@ services:
       - "14250:14250"
 
   otel-collector:
-    image: otel/opentelemetry-collector:0.41.0
-    command: ["--config=/etc/collector-config.yaml", "${OTELCOL_ARGS}"]
-    volumes:
-      - ./collector-config.yaml:/etc/collector-config.yaml
+    build:
+      context: .
+      dockerfile: Dockerfile-collector
     ports:
       - "4317:4317"        # OTLP gRPC receiver
       - "4318:4318"        # OTLP HTTP receiver
