--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {erl_opts, [debug_info]}.
-{deps, [{opentelemetry_api, "~> 1.0.0-rc.4"}, 
-        {opentelemetry, "~> 1.0.0-rc.4"},
-        {opentelemetry_exporter, "~> 1.0.0-rc.4"}]}.
+{deps, [{opentelemetry_api, "~> 1.0.0"}, 
+        {opentelemetry, "~> 1.0.0"},
+        {opentelemetry_exporter, "~> 1.0.0"}]}.
 
 {relx, [{release, {otel_getting_started, "0.1.0"},
          [opentelemetry_exporter, otel_getting_started,
