Added Resource Attributes

--- a/config/sys.config
+++ b/config/sys.config
@@ -9,6 +9,11 @@
           headers => [{"Header_Key", "Header_Value"}]}
         }}
       }]
+    },
+    {resource,
+      [{service,
+        #{name => "otel_getting_started", version => "1.0.0"}
+      }]
     }]
   }
 ].
